@@ -5,6 +5,7 @@ Revision history for FCGI-Buffer
 	IO::Compress::Brotli doesn't work on FreeBSD or Arm Linux
 	Set CGI::Info::status() if available
 	Added CircleCI integration
+	Improve setting CGI::Info status
 
 0.19	Fri Sep  1 21:28:40 EDT 2023
 	Fix uninitialisd variable
